clusters/production/apps/homepage/cilium-cluster-nodes-to-http.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cluster-nodes-to-homepage-http
  namespace: platform-production
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "3000"
        protocol: TCP
